# offline-stt-pipeline

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/: FUNDING.yml
.github/workflows/: build.yml
scripts/: install.bat  install.sh
src/: __init__.py  main.py
src/api/: __init__.py  models.py  routes.py
src/engine/: __init__.py  downloader.py  whisper.py
src/ui/templates/: index.html
src/utils/: config.py
tests/: test_api.py
